Update loading screen style